# ECE175_Final_Project_2023

./: .gitignore  ECE175_Final_Project_2023.sln  ECE175_Final_Project_2023.vcxproj  ECE175_Final_Project_2023.vcxproj.filters
CMakeMain_Testing/: CMakeLists.txt  CMakeMain_Testing.c  CMakeMain_Testing.h
CMakeProject1/: CMakeLists.txt  CMakeProject1.c  CMakeProject1.h
CMakeProject_Khalil/: CMakeLists.txt  CMakeProject_Khalil.c  CMakeProject_Khalil.h
CMake_Testing/: CMake_Testing.c
Documentation/: final_project_notes.txt  git_notes.txt
ECE_Final_Project_2023/: main.c
Main Code/: Main Code.vcxproj  main.c
