# CMakeList.txt : CMake project for CMakeMain_Testing, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CMakeMain_Testing")

# Add source to this project's executable.
add_executable (CMakeMain_Testing "CMakeMain_Testing" "CMakeMain_Testing.h")

# TODO: Add tests and install targets if needed.
