# CMakeList.txt : CMake project for CMakeProject_Khalil, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CMakeProject_Khalil")

# Add source to this project's executable.
add_executable (CMakeProject_Khalil "CMakeProject_Khalil.c" "CMakeProject_Khalil.h")

# TODO: Add tests and install targets if needed.
